# rust_js_parser

./: .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
examples/: react-component.tsx  test.js
src/: actix_integration.rs  create_script_origin.rs  examples.rs  execute_script.rs  js_parser.rs  lib.rs  main.rs  mod.rs  new.rs  print_output.rs  process.rs  react_compiler.rs  request_prop_handler.rs  send_wrapper.rs  simple_tests.rs  test.rs  unwrap_request.rs  wrap_map.rs  wrap_request.rs
src/examples/: typescript-example.ts
src/ssr/: http_request.rs
