[package]
name = "js_processor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "js_processor"
path = "src/main.rs"

[dependencies]
ssr_rs = { version = "0.8.3", optional = true }
swc = "25.0.0"
swc_common = "11.1.3"
swc_ecma_parser = "14.0.2"
swc_ecma_ast = "11.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0.12"
lazy_static = "1.4.0"
swc_ecma_react_compiler = "4.0.2"
actix-web = "4.9"
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["ssr"]
ssr = ["ssr_rs"]
