[package]
name = "js_processor"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "js_processor"
path = "src/main.rs"

[dependencies]
ssr_rs = "0.8.3" 
swc = "25.0.0"
swc_common = "11.1.3"
swc_ecma_parser = "14.0.2"
swc_ecma_ast = "11.0.0"
swc_ecma_transforms_react = "17.0.0"
swc_ecma_transforms_typescript = "17.0.0"
swc_ecma_visit = "11.0.0"
swc_ecma_codegen = "13.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0.12"
lazy_static = "1.4.0"
actix-web = "4.9"
tokio = { version = "1.0", features = ["full"] }
swc_ecma_lexer = "14.0.5"
swc_atoms = "5.0.0"
swc_ecma_transforms_base = "15.1.1"
swc_ecma_transforms_module = "17.0.0"
